# crates-ro

./: .gitignore  Cargo.toml
src/: errors.rs  index.rs  lib.rs  page_generator.rs
src/crates_io_client/: cr8.rs  mod.rs
src/generator-templates/: base.html.tera  crate.html.tera  letter.html.tera
static/: style.css
templates/: base.html.tera  index.html.tera  search.html.tera
